--- a/task-info.yaml
+++ b/task-info.yaml
@@ -1,5 +1,5 @@
 type: edu
-custom_name: Error!
+custom_name: stage6
 files:
 - name: hangman/hangman.py
   visible: true
@@ -13,23 +13,17 @@ files:
     from hstest.test_case import TestCase
     from hstest.check_result import CheckResult
 
-    from random import shuffle, randint
-    from string import ascii_lowercase, ascii_letters, punctuation, digits
-
-    try:
-        from hstest.dynamic.output.infinite_loop_detector import loop_detector
-        loop_detector.check_repeatable_output = False
-    except:
-        pass
+    from random import shuffle
+    from string import ascii_lowercase
 
     CheckResult.correct = lambda: CheckResult(True, '')
     CheckResult.wrong = lambda feedback: CheckResult(False, feedback)
+
 
     description_list = ['python', 'java', 'kotlin', 'javascript']
     out_of_description = ['clojure', 'haskell', 'typescript', 'assembler']
 
     catch = {i: 0 for i in description_list}
-    all_letters = ascii_letters + punctuation + digits
 
 
     class CoffeeMachineTest(StageTest):
@@ -38,7 +32,7 @@ files:
 
             for word in description_list + out_of_description + [ascii_lowercase]:
                 for i in range(100):
-                    words = [w if randint(1, 100) < 95 else w + w for w in word * 50 + all_letters]
+                    words = [w for w in word * 30]
                     shuffle(words)
                     inputs = '\n'.join(words)
                     tests += [TestCase(stdin=inputs, attach=words)]
@@ -78,7 +72,6 @@ files:
                     "Seems like you didn't print the game or did not separate the lines of the output properly.\n"
                     "Please, make sure that the format of your program's output corresponds to the one described in the task."
                 )
-
             for full_block, block in zip(full_blocks, blocks):
                 if ' ' in block:
                     return CheckResult.wrong(
@@ -94,16 +87,16 @@ files:
             is_hanged = hanged in full_blocks[-1]
 
             no_such_letter = 'That letter doesn\'t appear in the word'
-            already_typed = 'You\'ve already guessed this letter'
-            not_ascii = 'Please enter a lowercase English letter'
-            print_single = 'You should input a single letter'
+            no_improvements = 'No improvements'
 
             if is_hanged:
-                if (no_such_letter not in full_blocks[-1]):
+                if (no_such_letter not in full_blocks[-1] and
+                        no_improvements not in full_blocks[-1]):
+
                     return CheckResult.wrong(
                         f'Last block contains "{hanged}" '
-                        f'but doesn\'t contain "{no_such_letter}". '
-                        f'Check the first example. These texts '
+                        f'but doesn\'t contain "{no_improvements}" or '
+                        f'"{no_such_letter}". Check the first example. These texts '
                         f'should be within the same block. Your last block:\n\n'
                         f'{full_blocks[-1]}'
                     )
@@ -136,8 +129,6 @@ files:
                 )
 
             wrong_count = 0
-            typed_letters = set()
-            inputs = ''
 
             if is_hanged:
                 blocks += [blocks[-1]]
@@ -146,78 +137,13 @@ files:
             for letter, prev, next, prev_full, next_full in zip(
                     attach, blocks[0:], blocks[1:], full_blocks[0:], full_blocks[1:]):
 
-                # ---
-                detect_not_one = len(letter) != 1
+                if prev == next:
+                    wrong_count += 1
 
-                if detect_not_one and print_single not in prev_full:
-                    return CheckResult.wrong(
-                        f'Before: {prev}\n'
-                        f'Letter: {letter}\n'
-                        f'After : {next}\n\n'
-                        f'There is no \"{print_single}\" message, but should be'
-                    )
-                elif not detect_not_one and print_single in prev_full:
-                    return CheckResult.wrong(
-                        f'Before: {prev}\n'
-                        f'Letter: {letter}\n'
-                        f'After : {next}\n\n'
-                        f'There is \"{print_single}\" message, but shouldn\'t be'
-                    )
-
-                if detect_not_one:
-                    continue
-
-                # ---
-                detect_not_ascii = letter not in ascii_lowercase
-
-                if detect_not_ascii and not_ascii not in prev_full:
-                    return CheckResult.wrong(
-                        f'Before: {prev}\n'
-                        f'Letter: {letter}\n'
-                        f'After : {next}\n\n'
-                        f'There is no \"{not_ascii}\" message, but should be'
-                    )
-                elif not detect_not_ascii and not_ascii in prev_full:
-                    return CheckResult.wrong(
-                        f'Before: {prev}\n'
-                        f'Letter: {letter}\n'
-                        f'After : {next}\n\n'
-                        f'There is \"{not_ascii}\" message, but shouldn\'t be'
-                    )
-
-                if detect_not_ascii:
-                    continue
-
-                inputs += '\n' + letter
-
-                # ---
-                detect_typed_letter = letter in typed_letters
-
-                if detect_typed_letter and already_typed not in prev_full:
-                    return CheckResult.wrong(
-                        f'Before: {prev}\n'
-                        f'Letter: {letter}\n'
-                        f'After : {next}\n\n'
-                        f'There is no \"{already_typed}\" message, but should be\n'
-                        f'Input letters: {inputs}'
-                    )
-                elif not detect_typed_letter and already_typed in prev_full:
-                    return CheckResult.wrong(
-                        f'Before: {prev}\n'
-                        f'Letter: {letter}\n'
-                        f'After : {next}\n\n'
-                        f'There is \"{already_typed}\" message, but shouldn\'t be'
-                        f'Input letters: {inputs}'
-                    )
-
-                if detect_typed_letter:
-                    continue
-
-                # ---
                 detect_no_such_letter = (
                     (letter not in prev) and
                     (letter not in next) and
-                    (next == prev) and not detect_typed_letter
+                    (next == prev)
                 )
 
                 if detect_no_such_letter and no_such_letter not in prev_full:
@@ -235,19 +161,26 @@ files:
                         f'There is \"{no_such_letter}\" message, but shouldn\'t be'
                     )
 
-                all_letters_guessed = False
-                if '-' not in next:
-                    all_letters_guessed = [int(letter in typed_letters) for letter in next]
-                    all_letters_guessed = True if len(all_letters_guessed) == sum(all_letters_guessed) else False
+                detect_no_improvements = (
+                    (letter in prev) and
+                    (letter in next) and
+                    (next == prev)
+                )
 
-                if all_letters_guessed and survived not in next_full:
-                    return CheckResult.wrong("The user has guessed all the letters in the word,\n"
-                                             "but the program did not output a message about their victory (survival).")
-
-                if detect_no_such_letter:
-                    wrong_count += 1
-
-                typed_letters |= {letter}
+                if detect_no_improvements and no_improvements not in prev_full:
+                    return CheckResult.wrong(
+                        f'Before: {prev}\n'
+                        f'Letter: {letter}\n'
+                        f'After : {next}\n\n'
+                        f'There is no \"{no_improvements}\" message, but should be'
+                    )
+                elif not detect_no_improvements and no_improvements in prev_full:
+                    return CheckResult.wrong(
+                        f'Before: {prev}\n'
+                        f'Letter: {letter}\n'
+                        f'After : {next}\n\n'
+                        f'There is \"{no_improvements}\" message, but shouldn\'t be'
+                    )
 
                 cond1 = (
                     (letter not in prev) and
@@ -290,7 +223,8 @@ files:
             if is_hanged:
                 if wrong_count != 8:
                     return CheckResult.wrong(
-                        f'User was hanged after {wrong_count} wrong guesses, but should after 8'
+                        f'User was hanged after {wrong_count} wrong guesses, but should after 8. '
+                        f'Notice, that in this stage "No improvements" also counts as wrong guess.'
                     )
                 else:
                     return CheckResult.correct()
@@ -307,9 +241,9 @@ files:
     if __name__ == '__main__':
         CoffeeMachineTest('hangman.hangman').run_tests()
   learner_created: false
-feedback_link: https://hyperskill.org/projects/69/stages/378/implement#comment
+feedback_link: https://hyperskill.org/projects/69/stages/377/implement#comment
 status: Solved
 feedback:
   message: Congratulations!
-  time: Mon, 08 Mar 2021 19:18:17 UTC
-record: 6
+  time: Mon, 08 Mar 2021 18:28:53 UTC
+record: 7
